sync: 镜像 nexusai master 42c8208（四批：cwd3 + subcwd + acc2 + acc7）
来源 = nexusai master `42c8208`（已推 origin）。四棵树 diff -rq --strip-trailing-cr 全 0：
front/src→frontend/src · main/java→src/main/java · main/resources→src/main/resources · test→src/test
含 V74__create_claude_md_include_approval.sql（新迁移）+ 6 个新增测试类。
harness 侧 `mvn -q compile -DskipTests` EXIT 0。非镜像项（CLAUDE.md / .claude/ / AGENTS.md）未动。

四批内容：
- cwd3：会话根解析收口（GLOBAL_SESSION_KEY 接哨兵 + Lookup 第 5 态 sessionless + unknown 改 fail-loud + REST 强制会话锚）
- subcwd：进程级 user.dir 冒充会话态真缺陷族（SubagentExecutor 非 worktree 子代理 effectiveCwd / BashTool / PowerShellTool / PromptShellExecutor 丢 ctx）
- acc2：CLAUDE.md 外部 @import 审批态持久化（独立表）
- acc7：台账 #7（agentRegistry 接缝带维度 + listAgents 端点不发明会话 id）

Co-Authored-By: Claude Code <noreply@anthropic.com>